Official Changelog for ephFrame PHP Framework
==============================================================================

This file should record some kind of change history of the ephFrame Framework
Please check this file for hints after you updated the framework via svn to 
check some deprecated methods or new features.

# 2010-03-11

* Added closeTags to String Helper that closes all opened tags in a string
* model->listAll now can have [modelName].[fieldname] as fieldname and also accepts array as first argument

# 2010-02-28

## Notes
* created GIT-Repository to track little changes, hope to get a real GIT repo soon

## Enhancements
* Added Sluggable Behavior that can create slugs for every model with a various line of configuration vars. Check it out!
* I18n can translate plurals with __n, also substitution changed and bit refactored
* I18n works with real locale strings now, pass de_DE not only de
* ObjectSet now support findByProperty to search objects in Set that have a specific property value
* Model HABTM can have additional data in the join table
* Model also includes HABTM Models into default queries if field or conditions contain their name
* Router::uri() with no params returns current uri, same as url returns the whole current url
* Router replaces <P> notations as regexps too
* Controller->before[Action] now called with controllers parameters array
* Controller, Order of `beforeAction` calls changed
* Controller, before[ActionName] returns `false`, gets to 404 error page
* ArrayHelper::map maps a callback recursivly on every element

## Bugs
* Session start now just returns false and does not throw an error anymore (especially on Domainfactory Servers)
* Session.ttl now used in Session component (misspelling of config var)
* HTTPRequest now build correctly
* HTTPRequest - buildQuery now returns string including leading `?`
* Email Component can work with empty email attachments and uses theme correctly from controller