@@ -5,10 +5,11 @@ This file should record some kind of change history of the ephFrame Framework
 Please check this file for hints after you updated the framework via svn to 
 check some deprecated methods or new features.
 
-# 2010-03-11
+# 2010-03-12
 
 * Added closeTags to String Helper that closes all opened tags in a string
 * model->listAll now can have [modelName].[fieldname] as fieldname and also accepts array as first argument
+* Added a new behavior that updates updated and created timestamp fields of a model and now can do datetime, date and timestamp fields
 
 # 2010-02-28
 
